--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,5 +1,22 @@
+.about {
+    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
+}
+
 body {
     background-color: black;
+}
+
+/* controls the color of text on custom buttons */
+.custom-btn {
+    background-color: #627561; /* Replace with your desired initial button color */
+    color: #ffffff; /* Text color (white in this example) */
+    transition: background-color 0.3s ease; /* Smooth transition effect */
+}
+
+/* controls the color of hover on custom buttons */
+.custom-btn:hover {
+    background-color: #625a2c; /* Replace with your desired button color on hover */
+    color: white;
 }
 
 font {
@@ -10,6 +27,7 @@ font {
 footer {
     color: white;
     padding: 50px;
+    margin-top: 20px;
 }
 
 /* Added h2, this changes the h2 tags of the page JJE 2.1.24 */
@@ -63,28 +81,6 @@ h3 {
     line-height: 40px; /* Adjust the line height as needed */
 }
 
-p {
-    color: white;
-    font-size: 12pt;
-}
-
-.about {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* controls the color of text on custom buttons */
-.custom-btn {
-    background-color: #627561; /* Replace with your desired initial button color */
-    color: #ffffff; /* Text color (white in this example) */
-    transition: background-color 0.3s ease; /* Smooth transition effect */
-}
-
-/* controls the color of hover on custom buttons */
-.custom-btn:hover {
-    background-color: #625a2c; /* Replace with your desired button color on hover */
-    color: white;
-}
-
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
     margin-bottom: 0;
@@ -95,33 +91,21 @@ p {
     margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
 }
 
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
-
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-    .row.content {height:auto;}
+p {
+    color: white;
+    font-size: 12pt;
 }
 
+/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+.row.content {height: 150px}
+
+.two {
+    margin-top: 20px;
+}
+
+/* Breakpoint 1 */
 /* Code below controls the changes made on mobile devices */
 @media screen and (max-width: 390px) {
-
-    p {
-        line-height: 14pt;
-    }
-
-    .navbar-brand img {
-        width: 150px; /* Controls the width of the logo */
-        height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right */
-    }
-
-    .row.content {
-        height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-    }
 
     .custom-btn {
         margin-top: 5px;
@@ -155,39 +139,8 @@ p {
         margin-top: -70px;
     }
 
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
-    }
-
-    .show-2 {
-        padding-top: 10px;
-    }
-
-    .never-know {
-        padding-top: 10px;
-    }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
-    }
-
-}
-
-/* Code below controls the changes made on mobile devices */
-@media screen and (max-width: 320px) {
-
-    p {
-        line-height: 14pt;
+    .navbar {
+        font-size: 18pt;
     }
 
     .navbar-brand img {
@@ -196,47 +149,26 @@ p {
         margin-left: 20px; /* Moves the logo from left to right */
     }
 
+    .never-know {
+        padding-top: 10px;
+    }
+
+    p {
+        color: white;
+        font-size: 16pt;
+        line-height: 18pt;
+    }
+
+    .p-3 {
+        margin-top: 10px;
+    }
+
     .row.content {
         height:auto;}
 
     .rounded-circle {
         margin-bottom: 100px;
-    }
-
-    .custom-btn {
-        margin-top: 5px;
-    }
-
-    .email {
-        margin-left: -40px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h3 {
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -40px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .p-3 {
-        margin-top: 10px;
+        margin-left:5pt;
     }
 
     .show-1 {
@@ -245,10 +177,6 @@ p {
     }
 
     .show-2 {
-       padding-top: 10px;
-    }
-
-    .never-know {
         padding-top: 10px;
     }
 
