--- a/CSS/FAQ.css
+++ b/CSS/FAQ.css
@@ -6,6 +6,20 @@ font {
     color: white;
 }
 
+/* Set black background color, white text and some padding */
+footer {
+    background-image: url("images/stagePattern.jpg");
+    color: white;
+    padding: 15px;
+}
+
+.footer {
+    background-image: url('images/floorRug2.jpg'); /* Replace with the path to your image */
+    background-size: cover;
+    background-position: right bottom; /* Adjust the position as needed */
+    color: white; /* Adjust text color as needed */
+}
+
 /* Added h2, this changes the h2 tags of the page JJE 2.1.24 */
 h1 {
     font-family: "Lobster", serif;
@@ -73,20 +87,6 @@ p {
     width: 75%;
 }
 
-/* Set black background color, white text and some padding */
-footer {
-    background-image: url("images/stagePattern.jpg");
-    color: white;
-    padding: 15px;
-}
-
-.footer {
-    background-image: url('images/floorRug2.jpg'); /* Replace with the path to your image */
-    background-size: cover;
-    background-position: right bottom; /* Adjust the position as needed */
-    color: white; /* Adjust text color as needed */
-}
-
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
 .row.content {height: 900px}
 
@@ -97,291 +97,8 @@ footer {
         flex-direction: column;
     }
 
-    body {
-    background-color: black;
-}
-
-font {
-    color: white;
-}
-
-/* Set black background color, white text and some padding */
-footer {
-    color: white;
-    padding: 50px;
-}
-
-/* Added h2, this changes the h2 tags of the page JJE 2.1.24 */
-h1 {
-    font-family: "Lobster", serif;
-    color: white;
-}
-
-h2 {
-    font-family: "Raleway", serif;
-    font-weight: bold;
-    font-size: 16pt;
-    line-height: 15pt;
-    color: white;
-}
-
-h3 {
-    font-family: "Raleway", serif;
-    font-size: 12pt;
-    font-weight: lighter;
-    line-height: 5pt;
-    color: white;
-}
-
-.navbar {
-    padding-top: 30px; /* Adjust the top padding as needed */
-    padding-bottom: 30px; /* Adjust the bottom padding as needed */
-    font-family: "Raleway", serif;
-    font-weight: bold;
-    font-size: 16pt;
-    line-height: 15pt;
-    color: white;
-}
-
-.navbar-brand {
-    display: flex;
-    align-items: center; /* Vertically center items */
-    margin-right: auto; /* Move the brand (logo and text) to the left */
-}
-
-.navbar-brand img {
-    margin-right: 10px; /* Adjust margin between image and text as needed */
-    margin-left: 130px; /* Move the image towards the center */
-}
-
-.navbar-nav {
-    margin-left: auto; /* Move the tabs to the right */
-}
-
-.navbar-nav .nav-link {
-    line-height: 40px; /* Adjust the line height as needed */
-}
-
-p {
-    color: white;
-    font-size: 12pt;
-}
-
-.about {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* controls the color of text on custom buttons */
-.custom-btn {
-    background-color: #627561; /* Replace with your desired initial button color */
-    color: #ffffff; /* Text color (white in this example) */
-    transition: background-color 0.3s ease; /* Smooth transition effect */
-}
-
-/* controls the color of hover on custom buttons */
-.custom-btn:hover {
-    background-color: #625a2c; /* Replace with your desired button color on hover */
-    color: white;
-}
-
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-}
-
-.owners {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
-
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-    .row.content {height:auto;}
-}
-
-/* Code below controls the changes made on mobile devices */
-@media screen and (max-width: 390px) {
-
-    p {
-        line-height: 14pt;
-    }
-
-    .navbar-brand img {
-        width: 150px; /* Controls the width of the logo */
-        height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right */
-    }
-
-    .row.content {
-        height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-    }
-
-    .custom-btn {
-        margin-top: 5px;
-    }
-
-    .email {
-        margin-left: -40px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h3 {
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -100px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
-    }
-
-    .show-2 {
-        padding-top: 10px;
-    }
-
-    .never-know {
-        padding-top: 10px;
-    }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
-    }
-
-}
-
-/* Code below controls the changes made on mobile devices */
-@media screen and (max-width: 320px) {
-
-    p {
-        line-height: 14pt;
-    }
-
-    .navbar-brand img {
-        width: 150px; /* Controls the width of the logo */
-        height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right */
-    }
-
-    .row.content {
-        height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-    }
-
-    .custom-btn {
-        margin-top: 5px;
-    }
-
-    .email {
-        margin-left: -40px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h3 {
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -40px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
-    }
-
-    .show-2 {
-       padding-top: 10px;
-    }
-
-    .never-know {
-        padding-top: 10px;
-    }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
-    }
-
-}
-    
     /* Code below controls the changes made on mobile devices */
-    @media screen and (max-width: 320px) {
-
-        p {
-            line-height: 14pt;
-        }
-
-        .navbar-brand img {
-            width: 150px; /* Controls the width of the logo */
-            height: 40px; /* Controls the height of the logo */
-            margin-left: 20px; /* Moves the logo from left to right */
-        }
-
-        .row.content {
-            height: auto;
-        }
-
-        .rounded-circle {
-            margin-bottom: 100px;
-        }
+    @media screen and (max-width: 390px) {
 
         .custom-btn {
             margin-top: 5px;
@@ -415,6 +132,24 @@ p {
             margin-top: -70px;
         }
 
+        .navbar {
+            font-size: 18pt;
+        }
+
+        .navbar-brand img {
+            width: 150px; /* Controls the width of the logo */
+            height: 40px; /* Controls the height of the logo */
+            margin-left: 20px; /* Moves the logo from left to right */
+        }
+
+        .never-know {
+            padding-top: 10px;
+        }
+
+        p {
+            line-height: 14pt;
+        }
+
         .p-3 {
             margin-top: 10px;
         }
@@ -423,16 +158,21 @@ p {
             padding-bottom: 20px;
         }
 
+        .row.content {
+            height: auto;
+        }
+
+        .rounded-circle {
+            margin-bottom: 100px;
+            margin-left:5pt;
+        }
+
         .show-1 {
             margin-bottom: -80px;
             margin-top: 25px;
         }
 
         .show-2 {
-            padding-top: 10px;
-        }
-
-        .never-know {
             padding-top: 10px;
         }
 
