--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -2,6 +2,23 @@ body {
     background-color: black;
 }
 
+.col-sm-4 {
+    height: 575px; /* Adjust the height as needed */
+}
+
+/* controls the color of text on custom buttons */
+.custom-btn {
+    background-color: #627561; /* Replace with your desired initial button color */
+    color: #ffffff; /* Text color (white in this example) */
+    transition: background-color 0.3s ease; /* Smooth transition effect */
+}
+
+/* controls the color of hover on custom buttons */
+.custom-btn:hover {
+    background-color: #625a2c; /* Replace with your desired button color on hover */
+    color: white;
+}
+
 font {
     color: white;
 }
@@ -10,6 +27,10 @@ font {
 footer {
     color: white;
     padding: 50px;
+}
+
+.friday {
+    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
 }
 
 /* Added h2, this changes the h2 tags of the page JJE 2.1.24 */
@@ -32,32 +53,6 @@ h3 {
     font-weight: lighter;
     line-height: 5pt;
     color: white;
-}
-
-p {
-    color: white;
-    font-size: 12pt;
-}
-
-.col-sm-4 {
-    height: 575px; /* Adjust the height as needed */
-}
-
-/* controls the color of text on custom buttons */
-.custom-btn {
-    background-color: #627561; /* Replace with your desired initial button color */
-    color: #ffffff; /* Text color (white in this example) */
-    transition: background-color 0.3s ease; /* Smooth transition effect */
-}
-
-/* controls the color of hover on custom buttons */
-.custom-btn:hover {
-    background-color: #625a2c; /* Replace with your desired button color on hover */
-    color: white;
-}
-
-.friday {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
 }
 
 .navbar {
@@ -87,6 +82,11 @@ p {
 
 .navbar-nav .nav-link {
     line-height: 40px; /* Adjust the line height as needed */
+}
+
+p {
+    color: white;
+    font-size: 12pt;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -112,110 +112,9 @@ p {
     color: white;
 }
 
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-    .row.content {height:auto;}
+.your-band {
+    margin-bottom: -250px;
 }
-
-body {
-    background-color: black;
-}
-
-font {
-    color: white;
-}
-
-/* Set black background color, white text and some padding */
-footer {
-    color: white;
-    padding: 50px;
-}
-
-/* Added h2, this changes the h2 tags of the page JJE 2.1.24 */
-h1 {
-    font-family: "Lobster", serif;
-    color: white;
-}
-
-h2 {
-    font-family: "Raleway", serif;
-    font-weight: bold;
-    font-size: 16pt;
-    line-height: 15pt;
-    color: white;
-}
-
-h3 {
-    font-family: "Raleway", serif;
-    font-size: 12pt;
-    font-weight: lighter;
-    line-height: 5pt;
-    color: white;
-}
-
-.navbar {
-    padding-top: 30px; /* Adjust the top padding as needed */
-    padding-bottom: 30px; /* Adjust the bottom padding as needed */
-    font-family: "Raleway", serif;
-    font-weight: bold;
-    font-size: 16pt;
-    line-height: 15pt;
-    color: white;
-}
-
-.navbar-brand {
-    display: flex;
-    align-items: center; /* Vertically center items */
-    margin-right: auto; /* Move the brand (logo and text) to the left */
-}
-
-.navbar-brand img {
-    margin-right: 10px; /* Adjust margin between image and text as needed */
-    margin-left: 130px; /* Move the image towards the center */
-}
-
-.navbar-nav {
-    margin-left: auto; /* Move the tabs to the right */
-}
-
-.navbar-nav .nav-link {
-    line-height: 40px; /* Adjust the line height as needed */
-}
-
-p {
-    color: white;
-    font-size: 12pt;
-}
-
-.about {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* controls the color of text on custom buttons */
-.custom-btn {
-    background-color: #627561; /* Replace with your desired initial button color */
-    color: #ffffff; /* Text color (white in this example) */
-    transition: background-color 0.3s ease; /* Smooth transition effect */
-}
-
-/* controls the color of hover on custom buttons */
-.custom-btn:hover {
-    background-color: #625a2c; /* Replace with your desired button color on hover */
-    color: white;
-}
-
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-}
-
-.owners {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
@@ -225,25 +124,9 @@ p {
 /* Code below controls the changes made on mobile devices */
 @media screen and (max-width: 390px) {
 
-    p {
-        line-height: 14pt;
-    }
-
-    .navbar-brand img {
-        width: 150px; /* Controls the width of the logo */
-        height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right */
-    }
-
-    .row.content {
-        height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-    }
-
     .custom-btn {
         margin-top: 5px;
+        font-size: 20pt;
     }
 
     .email {
@@ -255,7 +138,13 @@ p {
         padding-bottom: 20px;
     }
 
+    h2 {
+        font-size: 20pt;
+        line-height: 20pt;
+    }
+
     h3 {
+        font-size: 18pt;
         line-height: 4pt;
     }
 
@@ -274,45 +163,29 @@ p {
         margin-top: -70px;
     }
 
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
-    }
-
-    .show-2 {
-        padding-top: 10px;
-    }
-
-    .never-know {
-        padding-top: 10px;
-    }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
-    }
-
-}
-
-/* Code below controls the changes made on mobile devices */
-@media screen and (max-width: 320px) {
-
-    p {
-        line-height: 14pt;
-    }
-
     .navbar-brand img {
         width: 150px; /* Controls the width of the logo */
         height: 40px; /* Controls the height of the logo */
         margin-left: 20px; /* Moves the logo from left to right */
+    }
+
+    .navbar {
+        font-size: 18pt;
+    }
+
+    .never-know {
+        margin-bottom: 90px;
+        margin-top: -20px;
+    }
+
+    p {
+        color: white;
+        font-size: 16pt;
+        line-height: 18pt;
+    }
+
+    .p-3 {
+        margin-top: 10px;
     }
 
     .row.content {
@@ -320,196 +193,95 @@ p {
 
     .rounded-circle {
         margin-bottom: 100px;
-    }
-
-    .custom-btn {
-        margin-top: 5px;
-    }
-
-    .email {
-        margin-left: -40px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h3 {
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -40px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .p-3 {
-        margin-top: 10px;
+        margin-left:5pt;
     }
 
     .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
+        margin-bottom: 10px;
+        margin-top: 20px;
     }
 
     .show-2 {
-       padding-top: 10px;
-    }
-
-    .never-know {
-        padding-top: 10px;
-    }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
-    }
-
-}
-
-/* Code below controls the changes made on mobile devices */
-@media screen and (max-width: 320px) {
-
-    p {
-        line-height: 14pt;
-    }
-
-    .navbar-brand img {
-       width: 150px; /* Controls the width of the logo */
-       height: 40px; /* Controls the height of the logo */
-       margin-left: 20px; /* Moves the logo from left to right */
-    }
-
-    .row.content {
-       height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-    }
-
-    .custom-btn {
-        margin-top: 5px;
-    }
-
-    .email {
-        margin-left: -40px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h3 {
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -40px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
-    }
-
-    .show-2 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 0px;
+        margin-top: 20px;
     }
 
     .show-3 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-top: 0px;
     }
 
     .show-4 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 0px;
+        margin-top: 20px;
     }
 
     .show-5 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 20px;
+        margin-top: 0px;
     }
 
     .show-6 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-top: 50px;
     }
 
     .show-7 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-top: 20px;
     }
 
     .show-8 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom:0px;
+        margin-top: 20px;
     }
 
     .show-9 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-top: 0px;
     }
 
     .show-10 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 0px;
+        margin-top: 20px;
     }
 
     .show-11 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-top: 0px;
     }
 
     .show-12 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 0px;
+        margin-top: 50px;
     }
 
     .show-13 {
-        margin-bottom: -80px;
-        margin-top: 5px;
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
+
+    .show-14 {
+        margin-bottom: 0px;
+        margin-top: 50px;
+    }
+
+    .show-15 {
+        margin-bottom: 0px;
+        margin-top: 30px;
     }
 
     .social {
         margin-top: -30px;
     }
 
+    .upcoming {
+        margin-top: -20px;
+    }
+
     .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
+        margin-bottom: -170px;
+        margin-top: -20px;
     }
 
 }
