--- a/CSS/About.css
+++ b/CSS/About.css
@@ -1,5 +1,22 @@
+.about {
+    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
+}
+
 body {
     background-color: black;
+}
+
+/* controls the color of text on custom buttons */
+.custom-btn {
+    background-color: #627561; /* Replace with your desired initial button color */
+    color: #ffffff; /* Text color (white in this example) */
+    transition: background-color 0.3s ease; /* Smooth transition effect */
+}
+
+/* controls the color of hover on custom buttons */
+.custom-btn:hover {
+    background-color: #625a2c; /* Replace with your desired button color on hover */
+    color: white;
 }
 
 font {
@@ -42,6 +59,8 @@ h3 {
     font-size: 16pt;
     line-height: 15pt;
     color: white;
+    margin-bottom: 0; /* Removes default margins */
+    border-radius: 0; /* Removes default margins */
 }
 
 .navbar-brand {
@@ -63,109 +82,8 @@ h3 {
     line-height: 40px; /* Adjust the line height as needed */
 }
 
-p {
-    color: white;
-    font-size: 12pt;
-}
-
-.about {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* controls the color of text on custom buttons */
-.custom-btn {
-    background-color: #627561; /* Replace with your desired initial button color */
-    color: #ffffff; /* Text color (white in this example) */
-    transition: background-color 0.3s ease; /* Smooth transition effect */
-}
-
-/* controls the color of hover on custom buttons */
-.custom-btn:hover {
-    background-color: #625a2c; /* Replace with your desired button color on hover */
-    color: white;
-}
-
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-}
-
 .owners {
     margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
-
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-    .row.content {height:auto;}
-}
-
-body {
-    background-color: black;
-}
-
-font {
-    color: white;
-}
-
-/* Set black background color, white text and some padding */
-footer {
-    color: white;
-    padding: 50px;
-}
-
-/* Added h2, this changes the h2 tags of the page JJE 2.1.24 */
-h1 {
-    font-family: "Lobster", serif;
-    color: white;
-}
-
-h2 {
-    font-family: "Raleway", serif;
-    font-weight: bold;
-    font-size: 16pt;
-    line-height: 15pt;
-    color: white;
-}
-
-h3 {
-    font-family: "Raleway", serif;
-    font-size: 12pt;
-    font-weight: lighter;
-    line-height: 5pt;
-    color: white;
-}
-
-.navbar {
-    padding-top: 30px; /* Adjust the top padding as needed */
-    padding-bottom: 30px; /* Adjust the bottom padding as needed */
-    font-family: "Raleway", serif;
-    font-weight: bold;
-    font-size: 16pt;
-    line-height: 15pt;
-    color: white;
-}
-
-.navbar-brand {
-    display: flex;
-    align-items: center; /* Vertically center items */
-    margin-right: auto; /* Move the brand (logo and text) to the left */
-}
-
-.navbar-brand img {
-    margin-right: 10px; /* Adjust margin between image and text as needed */
-    margin-left: 130px; /* Move the image towards the center */
-}
-
-.navbar-nav {
-    margin-left: auto; /* Move the tabs to the right */
-}
-
-.navbar-nav .nav-link {
-    line-height: 40px; /* Adjust the line height as needed */
 }
 
 p {
@@ -173,63 +91,23 @@ p {
     font-size: 12pt;
 }
 
-.about {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
-/* controls the color of text on custom buttons */
-.custom-btn {
-    background-color: #627561; /* Replace with your desired initial button color */
-    color: #ffffff; /* Text color (white in this example) */
-    transition: background-color 0.3s ease; /* Smooth transition effect */
-}
-
-/* controls the color of hover on custom buttons */
-.custom-btn:hover {
-    background-color: #625a2c; /* Replace with your desired button color on hover */
-    color: white;
-}
-
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-}
-
-.owners {
-    margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
-}
-
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
+.row.content {
+    height: 450px
+}
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
     .row.content {height:auto;}
 }
 
+/* Breakpoint 1 */
 /* Code below controls the changes made on mobile devices */
 @media screen and (max-width: 390px) {
 
-    p {
-        line-height: 14pt;
-    }
-
-    .navbar-brand img {
-        width: 150px; /* Controls the width of the logo */
-        height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right */
-    }
-
-    .row.content {
-        height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-    }
-
     .custom-btn {
         margin-top: 5px;
+        font-size: 20pt;
     }
 
     .email {
@@ -241,7 +119,13 @@ p {
         padding-bottom: 20px;
     }
 
+    h2 {
+        font-size: 20pt;
+        line-height: 20pt;
+    }
+
     h3 {
+        font-size: 18pt;
         line-height: 4pt;
     }
 
@@ -260,39 +144,8 @@ p {
         margin-top: -70px;
     }
 
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
-    }
-
-    .show-2 {
-        padding-top: 10px;
-    }
-
-    .never-know {
-        padding-top: 10px;
-    }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
-    }
-
-}
-
-/* Code below controls the changes made on mobile devices */
-@media screen and (max-width: 320px) {
-
-    p {
-        line-height: 14pt;
+    .navbar {
+        font-size: 18pt;
     }
 
     .navbar-brand img {
@@ -301,84 +154,18 @@ p {
         margin-left: 20px; /* Moves the logo from left to right */
     }
 
-    .row.content {
-        height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-    }
-
-    .custom-btn {
-        margin-top: 5px;
-    }
-
-    .email {
-        margin-left: -40px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h3 {
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -40px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .show-1 {
-        margin-bottom: -80px;
-        margin-top: 25px;
-    }
-
-    .show-2 {
-       padding-top: 10px;
-    }
-
     .never-know {
         padding-top: 10px;
     }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .your-band {
-        margin-bottom: -250px;
-        margin-top: 5px;
-    }
-
-}
-
-/* Code below controls the changes made on mobile devices */
-@media screen and (max-width: 320px) {
 
     p {
-        line-height: 14pt;
+        color: white;
+        font-size: 16pt;
+        line-height: 18pt;
     }
 
-    .navbar-brand img {
-        width: 150px; /* Controls the width of the logo */
-        height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right */
+    .p-3 {
+        margin-top: 10px;
     }
 
     .row.content {
@@ -386,55 +173,17 @@ p {
 
     .rounded-circle {
         margin-bottom: 100px;
-    }
-
-    .custom-btn {
-        margin-top: 5px;
-    }
-
-    .email {
-        margin-left: -40px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h3 {
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -40px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .p-3 {
-        margin-top: 10px;
+        margin-left:5pt;
     }
 
     .show-1 {
-        margin-bottom: -80px;
+        margin-bottom: 20px;
         margin-top: 25px;
     }
 
     .show-2 {
-       padding-top: 10px;
-    }
-
-    .never-know {
-        padding-top: 10px;
+        margin-bottom: 20px;
+        margin-top: 25px;
     }
 
     .social {
@@ -447,3 +196,4 @@ p {
     }
 
 }
+
