--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -213,7 +213,7 @@ p {
 
     .show-4 {
         margin-bottom: 0px;
-        margin-top: -200px;
+        margin-top: -80px; /* adding - number makes the top of the image rise to close gap */
     }
 
     .show-5 {
