--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -208,11 +208,12 @@ p {
 
     .show-1 {
         margin-bottom: 20px;
-        margin-top: 10px;
+        margin-top: 20px;
     }
 
     .show-2 {
-        padding-top: 10px;
+        margin-bottom: 20px;
+        margin-top: 20px;
     }
 
     .never-know {
