--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -2,8 +2,8 @@ body {
     background-color: black;
 }
 
-.col-sm-4 {
-    height: 575px; /* Adjust the height as needed */
+.col-md-4 {
+    height: 650px; /* Adjust the height as needed to control the height of row - allows everythign to fit so there are 3 squares on each row*/
 }
 
 /* controls the color of text on custom buttons */
@@ -91,8 +91,8 @@ p {
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
-    height: 450px;
-    }
+    height: 100%;
+}
 
 .text-center {
     justify-content: center;
@@ -116,172 +116,173 @@ p {
     margin-bottom: -250px;
 }
 
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-    .row.content {height:auto;}
-}
-
+/* Breakpoint 1 Based on iPhone 12*/
 /* Code below controls the changes made on mobile devices */
 @media screen and (max-width: 390px) {
 
-    .custom-btn {
-        margin-top: 5px;
-        font-size: 20pt;
-    }
-
-    .email {
-        margin-left: -50px;
-    }
-
-    footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    h2 {
-        font-size: 20pt;
-        line-height: 20pt;
-    }
-
-    h3 {
-        font-size: 18pt;
-        line-height: 4pt;
-    }
-
-    .list-unstyled {
-        align-content: center;
-    }
-
-    .mobile-logo {
-        width: 150px;
-        height: 150px;
-        margin-bottom: 120px;
-        margin-right: -100px;
-    }
-
-    .mobile-mission {
-        margin-top: -70px;
-    }
-
-    .navbar-brand img {
-        width: 150px; /* Controls the width of the logo */
-        height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right */
-    }
-
-    .navbar {
-        font-size: 18pt;
-    }
-
-    .never-know {
-        margin-bottom: 90px;
-        margin-top: -20px;
-    }
-
-    p {
-        color: white;
-        font-size: 16pt;
-        line-height: 18pt;
-    }
-
-    .p-3 {
-        margin-top: 10px;
-    }
-
-    .row.content {
-        height:auto;}
-
-    .rounded-circle {
-        margin-bottom: 100px;
-        margin-left:5pt;
-    }
-
-    .show-1 {
-        margin-bottom: 0px;
-        margin-top: 20px;
-    }
-
-    .show-2 {
-        margin-bottom: 0px;
-        margin-top: 20px;
-    }
-
-    .show-3 {
-        margin-bottom: -10px;
-        margin-top: 0px;
-    }
-
-    .show-4 {
-        margin-bottom: 0px;
-        margin-top: 20px; /* adding - number makes the top of the image rise to close gap */
-    }
-
-    .show-5 {
-        margin-bottom: 20px;
-        margin-top: 20px;
-    }
-
-    .show-6 {
-        margin-bottom: 10px;
-        margin-top: 20px;
-    }
-
-    .show-7 {
-        margin-bottom: 10px;
-        margin-top: 20px;
-    }
-
-    .show-8 {
-        margin-bottom:0px;
-        margin-top: 20px;
-    }
-
-    .show-9 {
-        margin-bottom: 10px;
-        margin-top: 0px;
-    }
-
-    .show-10 {
-        margin-bottom: 0px;
-        margin-top: 20px;
-    }
-
-    .show-11 {
-        margin-bottom: -20px;
-        margin-top: 0px;
-    }
-
-    .show-12 {
-        margin-bottom: 0px;
-        margin-top: 20px;
-    }
-
-    .show-13 {
-        margin-bottom: 0px;
-        margin-top: 0px;
-    }
-
-    .show-14 {
-        margin-bottom: 0px;
-        margin-top: 50px;
-    }
-
-    .show-15 {
-        margin-bottom: 0px;
-        margin-top: 30px;
-    }
-
-    .social {
-        margin-top: -30px;
-    }
-
-    .upcoming {
-        margin-top: -20px;
-    }
-
-    .your-band {
-        margin-bottom: -170px;
-        margin-top: -20px;
-    }
-
+.col-md-4 {
+    height: auto; /* Adjust the height as needed */
 }
+  
+.custom-btn {
+     margin-top: 5px;
+     font-size: 20pt;
+}
+
+.email {
+     margin-left: -50px;
+}
+
+footer {
+     padding-top: 20px;
+     padding-bottom: 20px;
+}
+
+h2 {
+     font-size: 20pt;
+     line-height: 20pt;
+}
+
+h3 {
+     font-size: 18pt;
+     line-height: 4pt;
+}
+
+.list-unstyled {
+     align-content: center;
+}
+
+.mobile-logo {
+     width: 150px;
+     height: 150px;
+     margin-bottom: 120px;
+     margin-right: -100px;
+}
+
+.mobile-mission {
+     margin-top: -70px;
+}
+
+.navbar-brand img {
+     width: 150px; /* Controls the width of the logo */
+     height: 40px; /* Controls the height of the logo */
+     margin-left: 20px; /* Moves the logo from left to right */
+}
+
+.navbar {
+     font-size: 18pt;
+}
+
+.never-know {
+     margin-bottom: 90px;
+     margin-top: -20px;
+}
+
+p {
+     color: white;
+     font-size: 16pt;
+     line-height: 18pt;
+}
+
+.p-3 {
+     margin-top: 10px;
+}
+
+.row.content {
+     height: auto;
+}
+
+.rounded-circle {
+     margin-bottom: 100px;
+     margin-left:5pt;
+}
+
+.show-1 {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.show-2 {
+    margin-bottom: 0px;
+    margin-top: 10px; /* This creates the small space above button on show, same for each following show */
+}
+
+.show-3 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-4 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+
+.show-5 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+
+.show-6 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-7 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-8 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-9 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-10 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-11 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-12 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-13 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-14 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+  
+.show-15 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+
+.social {
+    margin-top: -30px;
+}
+
+.upcoming {
+    margin-top: -20px;
+}
+
+.your-band {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+} /* Closes Breakpoint 1 Based on iPhone 12*/
