--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -116,6 +116,11 @@ p {
     margin-bottom: -250px;
 }
 
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+    .row.content {height:auto;}
+}
+
 /* Breakpoint 1 Based on iPhone 12*/
 /* Code below controls the changes made on mobile devices */
 @media screen and (max-width: 390px) {
