--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -251,7 +251,11 @@ p {
         margin-left: 25px;
     }
 
-     h2 {
+    .email {
+        margin-left: -60px;
+    }
+
+    h2 {
         font-size: 20pt;
         line-height: 20pt;
     }
@@ -265,7 +269,7 @@ p {
         width: 150px;
         height: 150px;
         margin-bottom: 120px;
-        margin-right: -200px;
+        margin-right: -141px;
     }
 
     .navbar-brand img {
