--- a/CSS/Store.css
+++ b/CSS/Store.css
@@ -84,6 +84,9 @@ p {
     font-size: 12pt;
 }
 
+.row {
+    height: 1000px;
+
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
     height: 1000px;
