--- a/CSS/Store.css
+++ b/CSS/Store.css
@@ -1,3 +1,6 @@
+/* Code below controls the changes made on mobile devices */
+@media screen and (min-width: 481px) {
+
 body {
     background-color: black;
 }
@@ -89,6 +92,7 @@ p {
     height: 450px;
 }
 }
+
 
 /* Code below controls the changes made on mobile devices */
 @media screen and (max-width: 390px) {
