--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -286,6 +286,16 @@ p {
         margin-top: 10px;
     }
 
+    .show-16 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+    
+    .show-17 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
     .social {
         margin-top: -30px;
     }
